# xhs-agent

./: .env.example  .gitignore  Dockerfile  Dockerfile.format  Dockerfile.img  Dockerfile.video  docker-compose.yml  format.sh  format_html.py  img_gen.py  promote.sh  pyproject.toml  video_gen.py
data/: novel_profile.json
data/cases/: case_000001.json  case_000002.json  case_000003.json  case_000004.json  case_000005.json  case_000006.json  case_000007.json  case_000008.json  case_000009.json  case_000010.json  case_000011.json  case_000012.json  novel_cases.json  sample_cases.json
src/: api.py  config.py  format_server.py  formatter.py  main.py
src/agents/: analyzer.py  extractor.py  knowledge.py  research.py  reviewer.py  templates.py  tracker.py  writer.py
src/prompts/: analyze.py  novel.py  review.py  write.py
src/storage/: database.py  models.py  vector_store.py
src/utils/: ollama_client.py
tests/: conftest.py  test_analyzer.py  test_database.py  test_formatter.py  test_reviewer.py
tests/fixtures/: cases.json
